--- a/src/components/Content/Widget/style.css
+++ b/src/components/Content/Widget/style.css
@@ -8,3 +8,8 @@
     justify-content: center;
     font-size: 32px;
 }
+
+.focused {
+    background-color: lightskyblue;
+    border: darkgray 2px solid;
+}
