--- a/src/components/Content/Widget/style.css
+++ b/src/components/Content/Widget/style.css
@@ -1,8 +1,8 @@
 .widget {
     height: 100px;
     width: 100px;
+    min-width: 100px;
     background: orange;
-    margin: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
