--- a/src/components/Layout/Columns/style.css
+++ b/src/components/Layout/Columns/style.css
@@ -2,3 +2,9 @@
     display: flex;
     flex-direction: row;
 }
+
+.with-scroll {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
