--- a/src/components/Content/Widget/style.css
+++ b/src/components/Content/Widget/style.css
@@ -3,7 +3,7 @@
     width: 200px;
     min-width: 200px;
     background: orange;
-    display: flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
     font-size: 32px;
