--- a/src/components/Layout/Columns/style.css
+++ b/src/components/Layout/Columns/style.css
@@ -1,10 +1,11 @@
-.focusable-columns-container {
-    display: flex;
-    flex-direction: row;
+.columns-continer {
+    display: block;
+    overflow-x: hidden;
+    white-space: nowrap;
 }
 
 .with-scroll {
     width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: visible;
 }
