--- a/src/components/Content/Widget/style.css
+++ b/src/components/Content/Widget/style.css
@@ -8,6 +8,7 @@
     justify-content: center;
     font-size: 32px;
     box-sizing: border-box;
+    border: 2px solid transparent;
 }
 
 .focused {
