implement pointer activation/deactivation for separate elements

--- a/src/components/Content/Widget/style.css
+++ b/src/components/Content/Widget/style.css
@@ -15,3 +15,8 @@
     background-color: lightskyblue;
     border: darkgray 2px solid;
 }
+
+.widget:hover {
+    background-color: lightskyblue;
+    border: 2px solid yellow;
+}
