mouse support, put split reducers, optimize updates

--- a/src/components/Content/Widget/style.css
+++ b/src/components/Content/Widget/style.css
@@ -16,7 +16,7 @@
     border: darkgray 2px solid;
 }
 
-.widget:hover {
+.mouse-active .widget:hover {
     background-color: lightskyblue;
     border: 2px solid yellow;
 }
